[package]
name = "snow-gpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.12.3", features = ["derive"] }
cgmath = "0.18.0"
clap = { version = "4.0.26", features = ["derive"] }
env_logger = "0.9.3"
log = "0.4.17"
pollster = "0.2.5"
rand = "0.8.5"
wgpu = "0.14.0"
winapi = "0.3.9"
winit = "0.27.5"
